--- a/OtelSpider.Web/Web.config
+++ b/OtelSpider.Web/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="OtelSpiderConnectionString" connectionString="Data Source=MOHAMED-HAMMAD;Initial Catalog=OtelSpider;User ID=sa;Password=P@ssw0rd;Persist Security Info=True;" providerName="System.Data.SqlClient"/>
-    <!--<add name="OtelSpiderConnectionString" connectionString="Data Source=188.121.44.217;Initial Catalog=OtelSpiderDB;User ID=OtelSpiderSQLDB;Password=SqlP@ssw0rd#2019;Persist Security Info=True;" providerName="System.Data.SqlClient" />-->
+    <add name="OtelSpiderConnectionString" connectionString="Data Source=188.121.44.217;Initial Catalog=OtelSpiderDB;User ID=OtelSpiderSQLDB;Password=SqlP@ssw0rd#2019;Persist Security Info=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
